--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-lockfile": "pnpm install --no-frozen-lockfile"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.15",
