--- a/website/vercel.json
+++ b/website/vercel.json
@@ -5,9 +5,9 @@
   "framework": "nextjs",
   "outputDirectory": ".next",
   "env": {
-    "NEXT_PUBLIC_APP_NAME": "Artintel",
-    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}",
-    "CLERK_SECRET_KEY": "${CLERK_SECRET_KEY}",
+    "NEXT_PUBLIC_APP_NAME": "Artintell",
+    "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_c3VwcmVtZS1qYWd1YXItNTYuY2xlcmsuYWNjb3VudHMuZGV2JA",
+    "CLERK_SECRET_KEY": "sk_test_4sBtFdFsUF7fxcXx0GHDVkE00VbYkqN0ABkunI57hV",
     "NEXT_PUBLIC_CLERK_SIGN_IN_URL": "/signin",
     "NEXT_PUBLIC_CLERK_SIGN_UP_URL": "/signup",
     "NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL": "/",
