--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "update-lockfile": "pnpm install --no-frozen-lockfile"
+    "update-lockfile": "pnpm install --no-frozen-lockfile",
+    "vercel-build": "node build.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.15",
