--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "buildCommand": "next build",
+  "buildCommand": "cd website && next build",
+  "installCommand": "cd website && pnpm install --no-frozen-lockfile",
   "framework": "nextjs",
-  "installCommand": "pnpm install --no-frozen-lockfile",
+  "outputDirectory": "website/.next",
   "env": {
     "NEXT_PUBLIC_APP_NAME": "Artintel",
     "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_c3VwcmVtZS1qYWd1YXItNTYuY2xlcmsuYWNjb3VudHMuZGV2JA",
