--- a/website/vercel.json
+++ b/website/vercel.json
@@ -11,6 +11,8 @@
     "NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_URL": "/",
     "NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_URL": "/",
     "NEXT_TYPESCRIPT_IGNORE_ERRORS": "true",
-    "NEXT_ESLINT_IGNORE_ERRORS": "true"
+    "NEXT_ESLINT_IGNORE_ERRORS": "true",
+    "NEXT_DISABLE_SOURCEMAPS": "true",
+    "NEXT_TELEMETRY_DISABLED": "1"
   }
 }
