--- a/website/package.json
+++ b/website/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node build-skip-static.js",
-    "build:static": "next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "update-lockfile": "pnpm install --no-frozen-lockfile"
