--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
     "NEXT_TYPESCRIPT_IGNORE_ERRORS": "true",
     "NEXT_ESLINT_IGNORE_ERRORS": "true",
     "NEXT_DISABLE_SOURCEMAPS": "true",
-    "NEXT_TELEMETRY_DISABLED": "1"
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "NODE_ENV": "production"
   }
 }
